# server.js
@@ -10,9 +10,13 @@ const userInfoRouter = require('./routes/userInfo');
 const withdrawRouter = require('./routes/withdraw');
 const { Configuration, OpenAIApi} = require("openai")
 
+const loanRoutes = require('./controllers/PersonalLoans');
+
+
+
 
 const configuration = new Configuration({
-    apiKey: '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'
+    apiKey: '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'
 })
 const openai = new OpenAIApi(configuration);
 
@@ -20,6 +24,7 @@ const swaggerFile = require('./swagger_output.json') //documentation
 const swaggerUi = require('swagger-ui-express') //ui for api
 
 const app = express();
+app.use(express.static('public'))
 //global middlewares
 app.use(cors());
 app.use(morgan("tiny"));
@@ -33,20 +38,56 @@ app.use("/user", UserRouter) // send all "/user" requests to UserRouter for rout
 app.use('/invoice', invoiceRoutes);
 app.use('/user-info', userInfoRouter);
 app.use('/withdraw', withdrawRouter);
-app.post("/question", async (req, res) => {
-    const prompt = req.body.prompt;
-    const response = await openai.createCompletion({
-      model: "text-davinci-003",
-      prompt: prompt,
-      temperature: 0,
-      max_tokens: 60,
-      top_p: 1,
-      frequency_penalty: 0.5,
-      presence_penalty: 0,
-    });
+// Use loan routes
+app.use('/api', loanRoutes);
+
+
+// Initialize an empty conversation history
+let conversationHistory = [
+  {
+    "role": "system",
+    "content": "You are a helpful assistant."
+  }
+];
+
+app.post('/api/assistant', async (req, res) => {
+  const prompt = req.body.prompt;
   
-    res.send(response.choices[0].text);
+  // Add the user's message to the conversation history
+  conversationHistory.push({
+    "role": "user",
+    "content": prompt
   });
+
+  const gptResponse = await openai.createChatCompletion({
+    model: "gpt-3.5-turbo",
+    messages: conversationHistory
+  });
+  
+  console.log('gptResponse: ', gptResponse); // Log the entire response
+  console.log('gptResponse.data.choices[0]: ', gptResponse.data.choices[0]); // Log the first choice
+
+  // Check if choices and message exists in the response
+  if (gptResponse && gptResponse.data && gptResponse.data.choices && gptResponse.data.choices[0] && gptResponse.data.choices[0].message) {
+    const assistantReply = gptResponse.data.choices[0].message.content;
+  
+    // Add the assistant's reply to the conversation history
+    conversationHistory.push({
+      "role": "assistant",
+      "content": assistantReply
+    });
+
+    res.send({ 'message': assistantReply });
+  } else {
+    res.status(500).send({ 'error': 'Unexpected response from OpenAI API' });
+  }
+});
+
+
+
+
+
+
 app.listen(PORT, () => {
     log.green(`Server is listening on port ${PORT}`);
 }
